Interlineado parrafos Agregando interlineado 1.5 rem a los parrafos

--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -46,6 +46,10 @@ h1 {
     font-size: xx-large;
 }
 
+p {
+    line-height: 1.5rem;
+}
+
 a {
     text-decoration: none;
     color:var(--main-color);
