--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,11 +1,12 @@
 :root {
     --main-color: #002f4c;        
 }
+@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 
 body {
     background-color: white;
     margin: 0;
-    font-family: 'DejaVu Serif';
+    font-family: 'Lora DejaVu Serif';
     font-size: 16px;
 }
 
