--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,14 +1,27 @@
 :root {
-    --main-color: #002f4c;        
+    /*--main-color: #002f4c;        */
+    --main-color:#003f66;
+    --triada1: #59a96a;
+    --triada2: #ffae42;
+    --complementario: #de232f;
+    --tono-oscuro: hsl(203, 100%, 15%);
+    --tono-claro: #0070b6;
+    --background: #f5f7f5;
+    --fuente: #1d201d;
 }
 @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 
 body {
-    background-color: white;
+    background-color: var(--background);
     margin: 0;
     font-family: 'Lora DejaVu Serif';
     font-size: 16px;
-    background-color: whitesmoke;
+    /*background-color: whitesmoke;*/
+    color: var(--fuente);
+}
+
+pre{
+    font-size: 10px;
 }
 
 header {
@@ -32,8 +45,8 @@ article {
 }
 
 footer {
-    background-color: var(--main-color);
-    color: white;
+    background-color: var(--fuente);
+    color: var(--background);
     height: 0.5in;
     justify-content: center;
     display: flex;
@@ -64,6 +77,7 @@ a {
 
 a:hover {
     text-decoration-line: underline;
+    color: var(--tono-claro);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -81,12 +95,12 @@ figure img {
 
 figure figcaption {
     font-style: italic;
-    color: var(--main-color);
+    color: var(--tono-oscuro);
 }
 
 blockquote {
     background: #f9f9f9;
-    border-left: 10px solid var(--main-color);
+    border-left: 10px solid var(--tono-claro);
     margin: 1.5em 10px;
     padding: 0.5em 30px;
     quotes: "\201C""\201D""\2018""\2019";
@@ -119,11 +133,11 @@ blockquote:before {
     font-size: small;
 }
 .titulo-cabecera {
-    color: var(--main-color);
+    color: var(--tono-claro);
 }
 
 .resumen {
-    border-left: solid var(--main-color) 0.35em;
+    border-left: solid var(--tono-claro) 0.35em;
 }
 .info-resumen {
     background-color: white;
@@ -139,12 +153,27 @@ blockquote:before {
 }
 
 .p-siguiente, .p-anterior {
+    background-color: var(--tono-claro);
+    color: var(--background);
     display: inline-block;
     border: solid 1px;
-    border-color: var(--main-color);
-    border-radius: 15%;
+    border-color: var(--tono-claro);
     padding: 5px;
     margin: 5px;
+}
+
+.p-siguiente > a, .p-anterior > a {
+    text-decoration: none;
+    color:var(--background);
+    
+}
+
+.p-siguiente > a:hover   {
+    text-decoration: none;
+    color:var(--background);
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: var(--tono-oscuro);
 }
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
