--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -68,6 +68,7 @@ h1 a:hover{
     text-decoration-line: none;
 }
 
+
 h1 {
     font-size: xx-large;
 }
@@ -102,6 +103,11 @@ figure img {
 figure figcaption {
     font-style: italic;
     color: var(--tono-oscuro);
+}
+
+textarea {
+    width: 100%;
+    height: 10rem;
 }
 
 blockquote {
